--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
     -->
     <title>Team Up</title>
   </head>
-  <body>
+  <body style="background-color: #f4f2ee;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
